--- a/pom.xml
+++ b/pom.xml
@@ -15,6 +15,12 @@
             <artifactId>postgresql</artifactId>
             <version>42.3.5</version>
         </dependency>
+        <dependency>
+            <groupId>org.jetbrains</groupId>
+            <artifactId>annotations</artifactId>
+            <version>RELEASE</version>
+            <scope>compile</scope>
+        </dependency>
     </dependencies>
 
 
